# skillsets

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  REPOSITORY_SETUP.md  ROADMAP.md  SECURITY.md  SOURCES.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  catalog.json  pyproject.toml  repository.yaml  requirements-dev.in  requirements-dev.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: dco.yml  (+11 more)
compatibility/: README.md  report-template.md
docs/: architecture.md  authoring.md  distribution.md  evals.md  github-pages.md  maintainer-signing.md  publication-reconciliation.md  release-process.md  release-recovery.md  solo-maintainer-governance.md  threat-model.md
evals/: routing-boundaries.json
packs/: README.md
schemas/: catalog.schema.json  compatibility-evidence-envelope.schema.json  compatibility-report.schema.json  eval-report.schema.json  evals.schema.json  generated-files.schema.json  publication-record.schema.json  release-intent.schema.json  release-metadata.schema.json  repository.schema.json  routing-boundaries.schema.json  skillpack.schema.json
scripts/: bootstrap.ps1  check-pack.ps1  check.ps1
tests/: conftest.py  rust-assets.json  test_bootstrap.py  test_check_commands.py  test_ci_bytecode.py  test_cli_coverage.py  test_configuration_hardening.py  test_configuration_surfaces.py  test_configure_release.py  test_dco.py  test_evidence_and_signing.py  test_genaptic_skillsets_development_contracts.py  test_genaptic_skillsets_development_helpers.py  test_genaptic_skillsets_development_routing.py  test_generated_snapshot.py  test_helper_adversarial.py  test_helpers.py  test_lifecycle_commands.py  test_lifecycle_distribution.py  test_path_safety.py  test_publication_security_branches.py  test_release_helpers.py  test_release_recovery.py  test_release_security.py  test_repository.py  test_repository_development_contracts.py  test_repository_development_helpers.py  test_repository_development_routing.py  test_repository_fixture.py  test_resource_hardening.py  test_routing_boundaries.py  test_rust_asset_checker.py  test_rust_skillpacks.py  test_skill_refinements.py  test_tooling_hardening.py  test_tooling_unit.py  test_workflow_contracts.py
tests/rust-harness/: Cargo.toml
tests/rust-harness/rust-best-practices/: Cargo.toml
tests/rust-harness/rust-best-practices/src/: bounded_fanout.rs  graceful_shutdown.rs  lib.rs  project_dirs.rs  sqlx_pool.rs  sync_worker_bridge.rs  typed_http_client.rs
tests/rust-harness/rust-cli-apps/: Cargo.toml
tests/rust-harness/rust-cli-apps/src/: finite_bounded_number.rs  lib.rs  removal_preview.rs
tests/rust-harness/src/: bounded_fanout.rs  finite_bounded_number.rs  graceful_shutdown.rs  lib.rs  project_dirs.rs  removal_preview.rs  sqlx_pool.rs  sync_worker_bridge.rs  typed_http_client.rs
tools/: README.md  bootstrap  check-dco  check-dependency-lock  check-rust-assets  configure-repository  generate-catalogs  generate-installers  generate-readme  lint-portable  release-pack  run-evals  validate-repository
(+164 files in other folders)
