[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genaptic-skillsets-tooling"
version = "0.1.0"
description = "Generation, validation, evaluation, and release tooling for Genaptic Skillsets."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Genaptic" }]
dependencies = [
  "PyYAML==6.0.3",
  "jsonschema==4.26.0",
]

[project.optional-dependencies]
dev = [
  "pip-tools==7.5.3",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]

[project.scripts]
skillpacks = "skillpack_tools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-config --strict-markers --cov=skillpack_tools --cov-report=term-missing"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
  "error",
]

[tool.coverage.run]
branch = true
source = ["skillpack_tools"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["dist"]
extend-include = [
  "tools/check-dependency-lock",
  "tools/check-rust-assets",
  "tools/configure-repository",
  "tools/generate-all",
  "tools/generate-catalogs",
  "tools/generate-installers",
  "tools/generate-readme",
  "tools/lint-portable",
  "tools/release-pack",
  "tools/run-evals",
  "tools/validate-repository",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tools/configure-repository" = ["E402"]
"tools/check-rust-assets" = ["E402"]
"tools/generate-all" = ["E402"]
"tools/generate-catalogs" = ["E402"]
"tools/generate-installers" = ["E402"]
"tools/generate-readme" = ["E402"]
"tools/release-pack" = ["E402"]
"tools/run-evals" = ["E402"]
"tools/validate-repository" = ["E402"]

[tool.ruff.format]
quote-style = "double"
