[workspace]
members = ["rust-best-practices", "rust-cli-apps"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
directories = "=6.0.0"
futures = "=0.3.31"
futures-util = "=0.3.31"
http = "=1.3.1"
reqwest = { version = "=0.12.27", default-features = false, features = ["json", "stream"] }
serde = { version = "=1.0.228", features = ["derive"] }
sqlx = { version = "=0.8.6", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "=1.51.3", features = ["macros", "rt", "rt-multi-thread", "sync", "test-util", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
