[package]
name = "genaptic-rust-best-practices-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
directories.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lib]
path = "src/lib.rs"
